--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
+    "prisma:seed": "node prisma/seed.js",
+    "postinstall": "prisma generate",
+    "build": "prisma generate && next build",
+    "dev": "next dev",
     "start": "next start",
     "lint": "next lint"
   },
