--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,22 @@
 {
   "version": 2,
-  "buildCommand": "prisma generate && next build",
-  "installCommand": "npm install",
-  "devCommand": "next dev",
-  "outputDirectory": ".next",
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "next.config.mjs",
+      "use": "@vercel/next"
+    }
+  ],
   "routes": [
     {
       "src": "/(.*)",
       "dest": "/"
     }
   ],
-  "builds": [
-    {
-      "src": "package.json",
-      "use": "@vercel/node"
-    }
-  ]
+  "buildCommand": "npx prisma generate && next build",
+  "installCommand": "npm install",
+  "outputDirectory": ".next"
 }
